# cicd-databricks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-wheel.yml  deploy-bundle.yml  main.yml
bundles/cities/: databricks.yml
bundles/cities/.databricks/bundle/dev/: variable-overrides.json
bundles/cities/resources/: pipelines.yml  pipleine.pipeline.yml  volumes.yml
bundles/cities/resources/jobs/: etl.yml
bundles/cities/resources/pipelines/: pipeline.yml
bundles/cities/resources/schemas/: bronze.yml  gold.yml  silver.yml
bundles/cities/resources/volumes/: landing.yml
bundles/cities/src/pipeline/explorations/: sample_exploration.py
bundles/cities/src/pipeline/utilities/: load.py
bundles/geography/: databricks.yml
bundles/geography/data/: resorts.csv  ski_resort_analysis.csv
bundles/geography/resources/: pipelines.yml  schemas.yml  volumes.yml
bundles/geography/src/transformations/: load_data.py  silver_transform.py
bundles/geography/src/utilities/: utils.py
bundles/meta/: databricks.yml
bundles/meta/resources/jobs/: META_CREATE_TABLES.yml
bundles/meta/resources/schemas/: config.yml  log.yml
bundles/meta/resources/volumes/: configfiles.yml
bundles/resorts/: databricks.yml
bundles/resorts/resources/: pipelines.yml  schemas.yml  volumes.yml
bundles/resorts/src/: README.md
bundles/resorts/src/transformations/: silver_transform.py
bundles/resorts/src/utilities/: utils.py
src/: utils.py
src/infinitive/: __init__.py
src/infinitive/transform/: __init__.py  loader.py
src/infinitive/utils/: __init__.py  common.py
(+5 files in other folders)
