[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Simple hello world package."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "hello_world", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
