[tool.poetry]
name = "infinitive"
version = "0.1.0"
description = "Application logic for Infinitives data transformation pipelines"
authors = ["Infinitive <tyler.tracey@infinitive.com>"]
readme = "README.md"
packages = [{ include = "infinitive", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
